# tertulia_inteligencia_artificial

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  propuesta_invitado_por_pull_request.md  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: main.yml
code/: README.md  edit_podcast.ipynb  record.sh  record_mics.sh  recording_monitor.py
code/cleaning/: cleaning.md  crop_audio.py  voice-changer.py  voice_changer_batch.py
como-se-hace/como-hacemos-la-tertulia/: index.html
como-se-hace/edicion/: index.html
como-se-hace/el-mejor-podcast/: index.html
como-se-hace/estadisticas/: index.html
como-se-hace/estructura-del-programa/: index.html
como-se-hace/futuros-temas/: index.html
docs/: .pages  como-hacemos-la-tertulia.md  estructura-del-programa.md  futuros-temas.md  index.md  quienes-somos.md  recomendaciones.md
docs/como-se-hace/: como-hacemos-la-tertulia.md  edicion.md  el-mejor-podcast.md  estadisticas.md  futuros-temas.md
docs/guiones/: .pages  01-copilot-fin-programacion.md  02-que-es-la-inteligencia.md  03-emergencia.md  03_minitertulia_emergencia.md  04-historia-modelos-lenguaje.md  template.md  wip_openai_closedai_y_competencia.md  wip_privatizacion_de_la_ia_real_o_ficticia.md  wip_que_es_la_inteligencia.md
docs/noticias/: 01_aniversario_2.md
guiones/01-copilot-fin-programacion/: index.html
guiones/02-que-es-la-inteligencia/: index.html
guiones/work-in-progress/: index.html
noticias/01_aniversario_2/: index.html
quienes-somos/: index.html
search/: search_index.json
(+147 files in other folders)
