[project]
name = "tertulia-inteligencia-artificial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "scikit-image>=0.26.0",
    "soundfile>=0.13.1",
    "tqdm>=4.67.3",
]
